--- a/website/templates/sign_up.html
+++ b/website/templates/sign_up.html
@@ -42,6 +42,19 @@ content %}
       placeholder="Confirm password"
     />
   </div>
+  <div class="form-check">
+    <input
+      type="checkbox"
+      class="form-check-input"
+      id="showPasswordRules"
+      name="showPasswordRules"
+      />
+    <label class="form-check-label" for="showPasswordRules">
+      Include broken authentication vulnerability
+    </label>
+  </div>
+  <div class="password-rules" id="passwordRules" style="display: none;">
+  </div>
   <br />
   <button type="submit" class="btn btn-primary">Submit</button>
 </form>
